testdata/ipaccess/want-static.yaml
# Generated by esgw. DO NOT EDIT.
# config_version: 475348b0f4d9
admin:
  address:
    pipe:
      path: /tmp/esgw-admin.sock
node:
  cluster: esgw
  id: esgw
  metadata:
    esgw.config_version: 475348b0f4d9
static_resources:
  clusters:
    - connect_timeout: 5s
      load_assignment:
        cluster_name: us/app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 18080
      name: us/app
      type: STATIC
  listeners:
    - address:
        socket_address:
          address: 127.0.0.1
          port_value: 18084
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                common_http_protocol_options:
                  idle_timeout: 60s
                http_filters:
                  - name: envoy.filters.http.rbac
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
                  - name: envoy.filters.http.cors
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: local_ratelimit
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                max_request_headers_kb: 60
                route_config:
                  name: rc/per-ip
                  virtual_hosts:
                    - domains:
                        - '*'
                      name: vh/per-ip
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: us/app
                            timeout: 15s
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              always_consume_default_token_bucket: false
                              descriptors:
                                - entries:
                                    - key: remote_address
                                  token_bucket:
                                    fill_interval: 3600s
                                    max_tokens: 2
                                    tokens_per_fill: 2
                              filter_enabled:
                                default_value:
                                  numerator: 100
                              filter_enforced:
                                default_value:
                                  numerator: 100
                              max_dynamic_descriptors: 100
                              rate_limits:
                                - actions:
                                    - remote_address: {}
                              stat_prefix: local_ratelimit
                              token_bucket:
                                fill_interval: 3600s
                                max_tokens: 2
                                tokens_per_fill: 2
                server_name: esgw
                stat_prefix: lis/per-ip
                strip_any_host_port: true
                use_remote_address: true
      name: lis/per-ip
    - address:
        socket_address:
          address: 127.0.0.1
          port_value: 18085
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                common_http_protocol_options:
                  idle_timeout: 60s
                http_filters:
                  - name: envoy.filters.http.rbac
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
                  - name: envoy.filters.http.cors
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: local_ratelimit
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                max_request_headers_kb: 60
                route_config:
                  name: rc/per-tenant
                  virtual_hosts:
                    - domains:
                        - '*'
                      name: vh/per-tenant
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: us/app
                            timeout: 15s
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              always_consume_default_token_bucket: false
                              descriptors:
                                - entries:
                                    - key: header:x-tenant
                                  token_bucket:
                                    fill_interval: 3600s
                                    max_tokens: 2
                                    tokens_per_fill: 2
                              filter_enabled:
                                default_value:
                                  numerator: 100
                              filter_enforced:
                                default_value:
                                  numerator: 100
                              max_dynamic_descriptors: 100
                              rate_limits:
                                - actions:
                                    - request_headers:
                                        descriptor_key: header:x-tenant
                                        header_name: x-tenant
                              stat_prefix: local_ratelimit
                              token_bucket:
                                fill_interval: 3600s
                                max_tokens: 2
                                tokens_per_fill: 2
                server_name: esgw
                stat_prefix: lis/per-tenant
                strip_any_host_port: true
                use_remote_address: true
      name: lis/per-tenant
    - address:
        socket_address:
          address: 127.0.0.1
          port_value: 18083
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                common_http_protocol_options:
                  idle_timeout: 60s
                http_filters:
                  - name: envoy.filters.http.rbac
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
                  - name: envoy.filters.http.cors
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: local_ratelimit
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                max_request_headers_kb: 60
                route_config:
                  name: rc/web
                  virtual_hosts:
                    - domains:
                        - '*'
                      name: vh/app
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: us/app
                            timeout: 15s
                          typed_per_filter_config:
                            envoy.filters.http.rbac:
                              '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
                              rbac:
                                rules:
                                  policies:
                                    ip-access:
                                      permissions:
                                        - any: true
                                      principals:
                                        - and_ids:
                                            ids:
                                              - remote_ip:
                                                  address_prefix: 10.243.37.0
                                                  prefix_len: 24
                                              - not_id:
                                                  remote_ip:
                                                    address_prefix: 10.243.37.9
                                                    prefix_len: 32
                server_name: esgw
                stat_prefix: lis/web
                strip_any_host_port: true
                use_remote_address: true
      name: lis/web
