testdata/ipaccess/want-xds.json
{
  "clusters": {
    "us/app": {
      "connect_timeout": "5s",
      "eds_cluster_config": {
        "eds_config": {
          "ads": {}
        }
      },
      "name": "us/app",
      "type": "EDS"
    }
  },
  "endpoints": {
    "us/app": {
      "cluster_name": "us/app",
      "endpoints": [
        {
          "lb_endpoints": [
            {
              "endpoint": {
                "address": {
                  "socket_address": {
                    "address": "127.0.0.1",
                    "port_value": 18080
                  }
                }
              }
            }
          ]
        }
      ]
    }
  },
  "listeners": {
    "lis/per-ip": {
      "address": {
        "socket_address": {
          "address": "127.0.0.1",
          "port_value": 18084
        }
      },
      "filter_chains": [
        {
          "filters": [
            {
              "name": "envoy.filters.network.http_connection_manager",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                "common_http_protocol_options": {
                  "idle_timeout": "60s"
                },
                "http_filters": [
                  {
                    "name": "envoy.filters.http.rbac",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC"
                    }
                  },
                  {
                    "name": "envoy.filters.http.cors",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
                    }
                  },
                  {
                    "name": "envoy.filters.http.jwt_authn",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication"
                    }
                  },
                  {
                    "name": "envoy.filters.http.local_ratelimit",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit",
                      "stat_prefix": "local_ratelimit"
                    }
                  },
                  {
                    "name": "envoy.filters.http.router",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                    }
                  }
                ],
                "max_request_headers_kb": 60,
                "rds": {
                  "config_source": {
                    "ads": {}
                  },
                  "route_config_name": "rc/per-ip"
                },
                "server_name": "esgw",
                "stat_prefix": "lis/per-ip",
                "strip_any_host_port": true,
                "use_remote_address": true
              }
            }
          ]
        }
      ],
      "name": "lis/per-ip"
    },
    "lis/per-tenant": {
      "address": {
        "socket_address": {
          "address": "127.0.0.1",
          "port_value": 18085
        }
      },
      "filter_chains": [
        {
          "filters": [
            {
              "name": "envoy.filters.network.http_connection_manager",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                "common_http_protocol_options": {
                  "idle_timeout": "60s"
                },
                "http_filters": [
                  {
                    "name": "envoy.filters.http.rbac",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC"
                    }
                  },
                  {
                    "name": "envoy.filters.http.cors",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
                    }
                  },
                  {
                    "name": "envoy.filters.http.jwt_authn",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication"
                    }
                  },
                  {
                    "name": "envoy.filters.http.local_ratelimit",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit",
                      "stat_prefix": "local_ratelimit"
                    }
                  },
                  {
                    "name": "envoy.filters.http.router",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                    }
                  }
                ],
                "max_request_headers_kb": 60,
                "rds": {
                  "config_source": {
                    "ads": {}
                  },
                  "route_config_name": "rc/per-tenant"
                },
                "server_name": "esgw",
                "stat_prefix": "lis/per-tenant",
                "strip_any_host_port": true,
                "use_remote_address": true
              }
            }
          ]
        }
      ],
      "name": "lis/per-tenant"
    },
    "lis/web": {
      "address": {
        "socket_address": {
          "address": "127.0.0.1",
          "port_value": 18083
        }
      },
      "filter_chains": [
        {
          "filters": [
            {
              "name": "envoy.filters.network.http_connection_manager",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                "common_http_protocol_options": {
                  "idle_timeout": "60s"
                },
                "http_filters": [
                  {
                    "name": "envoy.filters.http.rbac",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC"
                    }
                  },
                  {
                    "name": "envoy.filters.http.cors",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
                    }
                  },
                  {
                    "name": "envoy.filters.http.jwt_authn",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication"
                    }
                  },
                  {
                    "name": "envoy.filters.http.local_ratelimit",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit",
                      "stat_prefix": "local_ratelimit"
                    }
                  },
                  {
                    "name": "envoy.filters.http.router",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                    }
                  }
                ],
                "max_request_headers_kb": 60,
                "rds": {
                  "config_source": {
                    "ads": {}
                  },
                  "route_config_name": "rc/web"
                },
                "server_name": "esgw",
                "stat_prefix": "lis/web",
                "strip_any_host_port": true,
                "use_remote_address": true
              }
            }
          ]
        }
      ],
      "name": "lis/web"
    }
  },
  "routes": {
    "rc/per-ip": {
      "name": "rc/per-ip",
      "virtual_hosts": [
        {
          "domains": [
            "*"
          ],
          "name": "vh/per-ip",
          "routes": [
            {
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "us/app",
                "timeout": "15s"
              },
              "typed_per_filter_config": {
                "envoy.filters.http.local_ratelimit": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit",
                  "always_consume_default_token_bucket": false,
                  "descriptors": [
                    {
                      "entries": [
                        {
                          "key": "remote_address"
                        }
                      ],
                      "token_bucket": {
                        "fill_interval": "3600s",
                        "max_tokens": 2,
                        "tokens_per_fill": 2
                      }
                    }
                  ],
                  "filter_enabled": {
                    "default_value": {
                      "numerator": 100
                    }
                  },
                  "filter_enforced": {
                    "default_value": {
                      "numerator": 100
                    }
                  },
                  "max_dynamic_descriptors": 100,
                  "rate_limits": [
                    {
                      "actions": [
                        {
                          "remote_address": {}
                        }
                      ]
                    }
                  ],
                  "stat_prefix": "local_ratelimit",
                  "token_bucket": {
                    "fill_interval": "3600s",
                    "max_tokens": 2,
                    "tokens_per_fill": 2
                  }
                }
              }
            }
          ]
        }
      ]
    },
    "rc/per-tenant": {
      "name": "rc/per-tenant",
      "virtual_hosts": [
        {
          "domains": [
            "*"
          ],
          "name": "vh/per-tenant",
          "routes": [
            {
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "us/app",
                "timeout": "15s"
              },
              "typed_per_filter_config": {
                "envoy.filters.http.local_ratelimit": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit",
                  "always_consume_default_token_bucket": false,
                  "descriptors": [
                    {
                      "entries": [
                        {
                          "key": "header:x-tenant"
                        }
                      ],
                      "token_bucket": {
                        "fill_interval": "3600s",
                        "max_tokens": 2,
                        "tokens_per_fill": 2
                      }
                    }
                  ],
                  "filter_enabled": {
                    "default_value": {
                      "numerator": 100
                    }
                  },
                  "filter_enforced": {
                    "default_value": {
                      "numerator": 100
                    }
                  },
                  "max_dynamic_descriptors": 100,
                  "rate_limits": [
                    {
                      "actions": [
                        {
                          "request_headers": {
                            "descriptor_key": "header:x-tenant",
                            "header_name": "x-tenant"
                          }
                        }
                      ]
                    }
                  ],
                  "stat_prefix": "local_ratelimit",
                  "token_bucket": {
                    "fill_interval": "3600s",
                    "max_tokens": 2,
                    "tokens_per_fill": 2
                  }
                }
              }
            }
          ]
        }
      ]
    },
    "rc/web": {
      "name": "rc/web",
      "virtual_hosts": [
        {
          "domains": [
            "*"
          ],
          "name": "vh/app",
          "routes": [
            {
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "us/app",
                "timeout": "15s"
              },
              "typed_per_filter_config": {
                "envoy.filters.http.rbac": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute",
                  "rbac": {
                    "rules": {
                      "policies": {
                        "ip-access": {
                          "permissions": [
                            {
                              "any": true
                            }
                          ],
                          "principals": [
                            {
                              "and_ids": {
                                "ids": [
                                  {
                                    "remote_ip": {
                                      "address_prefix": "10.243.37.0",
                                      "prefix_len": 24
                                    }
                                  },
                                  {
                                    "not_id": {
                                      "remote_ip": {
                                        "address_prefix": "10.243.37.9",
                                        "prefix_len": 32
                                      }
                                    }
                                  }
                                ]
                              }
                            }
                          ]
                        }
                      }
                    }
                  }
                }
              }
            }
          ]
        }
      ]
    }
  },
  "secrets": {},
  "version": "05d36e6d0fe6"
}
